test/Analysis/cf_conditional.glsl
void testFunc() {
    bool a = true;
    int b = 1;

    // error: boolean expression expected in if condition
    if (b) {

    } else {

    }

    // OK
    if (a) {

    } else {

    }
}
